# aquila-trace

./: README.md  aquila-trace  requirements.txt
aquila 26/aquila_trace/: ARCHITECTURE.md  DEPLOYMENT.md  EXAMPLES.md  IMPLEMENTATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  main.py  pyproject.toml  tutorial.py
aquila 26/aquila_trace/configs/: default_config.yaml
aquila 26/aquila_trace/src/: __init__.py
aquila 26/aquila_trace/src/api/: __init__.py
aquila 26/aquila_trace/src/blockchain/: __init__.py
aquila 26/aquila_trace/src/core/: __init__.py  config.py  exceptions.py  logger.py
aquila 26/aquila_trace/src/data/: __init__.py
aquila 26/aquila_trace/src/graph/: __init__.py
aquila 26/aquila_trace/src/ml/: __init__.py
aquila 26/aquila_trace/src/nlp/: __init__.py
aquila trace/: README.md  aap.py  config.py  generate_sample_data.py  main.py  requirements.txt  schemas.py  test_api.py
aquila trace/analytics/: __init__.py  graph_analysis.py
aquila trace/data/: crypto_transactions.csv  transactions.csv
aquila trace/models/: __init__.py  anomaly_detector.py  risk_scorer.py
aquila trace/utils/: __init__.py  data_loader.py
